--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database
 spring.datasource.url=jdbc:mysql://localhost/starwars?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=seu_user
+spring.datasource.password=sua_senha
 
 
 # Schema Initialization
