--- a/src/test/resources/application-it.properties
+++ b/src/test/resources/application-it.properties
@@ -4,5 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Database
 spring.datasource.url=${MYSQL_HOST:jdbc:mysql://localhost/starwars?useSSL=false}
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.datasource.username=${MYSQL_USER:seu_user}
+spring.datasource.password=${MYSQL_PASSWORD:sua_senha}
